--- a/pom.xml
+++ b/pom.xml
@@ -12,11 +12,19 @@
         <exec.mainClass>com.mycompany.hibernatetest.HibernateTest</exec.mainClass>
     </properties>
     
+    
+    
     <dependencies>
         <dependency>
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
             <version>8.4.0</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>jakarta.persistence</groupId>
+            <artifactId>jakarta.persistence-api</artifactId>
+            <version>3.1.0</version>
         </dependency>
         
         <dependency>
